Thu Apr 14 21:21:06 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/win32.h (frexp, modf): wrongly declared as pure in
	  mingw math.h.

Thu Apr 14 21:21:01 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/win32.h (ftruncate, truncate): mingw64 misses
	  prototypes.

Thu Apr 14 16:01:45 2011  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* io.c (rb_f_syscall): reduce warning: "HAVE___SYSCALL" is not defined.

Tue Apr 12 19:19:50 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/uri/common.rb: avoid race condition. fixes #4572

Tue Apr 12 10:37:39 2011  NAKAMURA Usaku  <usa@ruby-lang.org>

	* include/ruby/win32.h: VC doesn't have ftruncate() and others, but
	  ruby needs HAVE_ macros to use our emulation functions.
	  (fix the problem of 31262)

Tue Apr 12 01:33:00 2011  Luis Lavena  <luislavena@gmail.com>

	* configure.in: properly evaluate existence of truncate, ftruncate
	  and ftello for MinGW. [ruby-core:35678]
	* win32/win32.c: rename truncate, ftruncate and ftello to avoid 
	  redefinitions.
	* win32/win32.h: ditto.

Fri Apr  8 16:01:56 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/stringio/stringio.c (strio_getline): check whether str is
	  a string when str and lim are given.
	  https://twitter.com/watson1978/status/56225052152168449

Wed Apr  6 15:12:40 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/openssl/ossl_pkey_dh.c (ossl_dh_initialize):
	  pop pushed error after each try of reading. fixes #4550

	* ext/openssl/ossl_pkey_dsa.c (ossl_dsa_initialize): ditto.

	* ext/openssl/ossl_pkey_ec.c (ossl_ec_initialize): ditto.

Wed Apr  6 11:36:44 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/openssl/ossl_pkey_rsa.c (ossl_rsa_initialize):
	  pop pushed error after each try of reading. fixes #4550

Mon Apr  4 21:41:26 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* io.c (rb_io_syswrite): While local FS writes are usually
	  buffered, the buffers can be full or the file opened with