@@ -1,3 +1,11 @@
+Thu Apr 14 23:43:43 2011  NAKAMURA Usaku  <usa@ruby-lang.org>
+
+	* numeric.c (ruby_float_step): wrong loop condition.
+	  fixes [ruby-core:35753], reported by Joey Zhou.
+
+	* test/ruby/test_range.rb (TestRange#test_step_ruby_core_35753):
+	  test above change.
+
 Thu Apr 14 21:21:06 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* include/ruby/win32.h (frexp, modf): wrongly declared as pure in
